--- a/demo2/src/main/resources/application.properties
+++ b/demo2/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.password=1111
 #spring.jpa.properties.hibernate.hbm2ddl.auto=validate
 spring.jpa.show-sql=true
-
+spring.flyway.baseline-on-migrate=true
 #Properties for server
 
 server.port=9090
